[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "videollama2"
version = "1.0"
authors = [
    { name = "Zesen Cheng", email = "cyanlaser@stu.pku.edu.cn" },
    { name = "Hang Zhang" },
    { name = "Xin Li" },
]
description = "Release of VideoLLaMA2"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch>=2.4.0,<2.5.0",
    "transformers>=4.44.0,<4.45.0",
    "deepspeed>=0.15.3,<0.16.0",
    "peft>=0.4.0,<0.5.0",
    "timm>=1.0.3,<1.1.0",
    "numpy>=1.26.4,<1.27.0",
    "decord>=0.6.0,<0.7.0",
    "imageio>=2.36.0,<2.37.0",
    "moviepy>=1.0.3,<1.1.0",
    "opencv-python>=4.10.0.84,<4.10.1.0",
    "pysubs2",
    "scikit-learn>=1.5.2,<1.6.0",
    "huggingface_hub>=0.24.0,<0.25.0",
    "einops>=0.8.0,<0.9.0",
    "einops-exts==0.0.4",
    "bitsandbytes>=0.44.1,<0.45.0",
    "pydantic>=2.0",
    "markdown2[all]",
    "gradio>=3.50.0,<3.51.0",
    "gradio_client>=0.6.1,<0.7.0",
    "requests",
    "openai",
    "uvicorn",
    "fastapi",
    "tensorboard",
    "wandb",
    "tabulate",
]

[project.urls]
"Homepage" = "https://github.com/DAMO-NLP-SG/VideoLLaMA2"
"Bug Tracker" = "https://github.com/DAMO-NLP-SG/VideoLLaMA2/issues"

[tool.pdm.build]
excludes = ["./.git"]
package-dir = "."
includes = ["./videollama2"]
